# vd-chain

./: .gitignore  .gitlab-ci.yml  .lefthook.yml  Makefile  README.md  REBRAND.md
.github/: labeler.yml
e2e-testing/: reset-network.sh
indexer/: Dockerfile.postgres-package.local  Dockerfile.service.local  Dockerfile.service.remote  README.md  TESTING.md  alertmanager.yml  docker-compose-local-deployment.yml  docker-compose.yml  initialize-docker-postgres-user.sh  loki-config.yml  package.json  pnpm-lock.yaml  prometheus.yml  promtail-config.yml  todo.md
proto/: Makefile  README.md  buf.yaml
proto-js/: README.md  package-lock.json  package.json
proto-py/: LICENSE  setup.py
proto-rs/: Cargo.toml  LICENSE  README.md  deny.toml
proto-rs/src/: _includes.rs  lib.rs  vindax.accountplus.rs  vindax.affiliates.rs  vindax.assets.rs  vindax.blocktime.rs  vindax.bridge.rs  vindax.clob.rs  vindax.daemons.bridge.rs  vindax.daemons.liquidation.rs  vindax.daemons.pricefeed.rs  vindax.delaymsg.rs  vindax.epochs.rs  vindax.feetiers.rs  vindax.govplus.rs  vindax.indexer.events.rs  vindax.indexer.indexer_manager.rs  vindax.indexer.off_chain_updates.rs  vindax.indexer.protocol.v1.rs  vindax.indexer.redis.rs  vindax.indexer.socks.rs  vindax.listing.rs  vindax.perpetuals.rs  vindax.prices.rs  vindax.ratelimit.rs  vindax.revshare.rs  vindax.rewards.rs  vindax.sending.rs  vindax.stats.rs  vindax.subaccounts.rs  vindax.vault.rs  vindax.vest.rs
protocol/: .env  .gitignore  .gitleaks.toml  .golangci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  sims.mk  (+1 more)
(+1975 files in other folders)
