[package]
name = "vindax-proto"
version = "0.4.0"
edition = "2021"
description = "Compiled Vindax protobuf files"
repository = "https://github.com/danielvindax/vd-chain/tree/main/proto-rs"
license = "LicenseRef-Vindax-Custom"

[lib]
doctest = false

[features]
default = ["grpc-transport"]
grpc-transport = ["tonic/transport"]

[dependencies]
cosmos-sdk-proto = { version = "0.27", default-features = false, features = ["grpc"] }
prost = { version = "0.13", default-features = false }
prost-types = "0.13"
tonic = { version = "0.13", default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
regex = "1.11.1"
tonic-buf-build = "0.3.1"
prost-build = "0.13" # keep the version the same as in tonic-buf-build
tonic-build = "0.13" # keep the version the same as in tonic-buf-build
